--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,23 +1,26 @@
-<p style="color: green"><%= notice %></p>
+<% content_for :title, "G0RD0.com" %>
 
-<% content_for :title, "Posts" %>
+<div class="container-fluid bg-dark text-light min-vh-100">
+  <div class="row">
+    <div class="col-lg-8 mx-auto">
 
-<h1>Posts</h1>
+      <header class="text-center my-5">
+        <h1 class="display-4 fw-bold">Lucas Gordon</h1>
+        <p class="lead">Welcome to my personal blog</p>
+      </header>
 
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title"><%= post.title %></h5>
-        <p class="card-text"><%= post.body %></p>
-        <%= link_to "Show", post, class: "btn btn-primary" %>
+      <div id="posts" class="mb-5">
+        <% @posts.each do |post| %>
+          <div class="card bg-secondary text-light mb-4">
+            <div class="card-body">
+              <%= render post %>
+              <%= link_to "Read more", post, class: "btn btn-outline-light mt-2" %>
+            </div>
+          </div>
+        <% end %>
       </div>
-    </div>
-  <% end %>
-</div>
 
-<%= link_to "New post", new_post_path %>
+      <%= link_to "New post", new_post_path, class: "btn btn-primary mb-5" %>
+    </div>
+  </div>
+</div>
