--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,12 +1,15 @@
-<% content_for :title, "Editing post" %>
+<div class="container mt-5">
 
-<h1>Editing post</h1>
+  <% content_for :title, "Editing post" %>
 
-<%= render "form", post: @post %>
+  <h1>Editing post</h1>
 
-<br>
+  <%= render "form", post: @post %>
 
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
+  <br>
+
+  <div>
+    <%= link_to "Cancel", @post %> |
+    <%= link_to "Back to posts", posts_path %>
+  </div>
 </div>
