--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,38 @@
-<div class="container py-5">
-  <% if notice.present? %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <%= notice %>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-  <% end %>
-
-  <div class="card bg-dark text-light mb-4">
-    <div class="card-body">
+<div class="row">
+  <div class="col-md-2 border-contrast-right vh-100">
+    <h5 class="mb-3">All Posts</h5>
+    <% Post.all.each do |post| %>
+      <%= link_to post_path(post), class: "text-decoration-none text-light d-block mb-2" do %>
+        <div class="post-link p-2 <%= 'bg-secondary' if post == @post %>">
+          <%= post.title %>
+        </div>
+      <% end %>
+      <% unless post == Post.all.last %>
+        <hr class="my-2 border-secondary">
+      <% end %>
+    <% end %>
+  </div>
+  <div class="col-md-10">
+    <div class="container py-5">
+      <% if notice.present? %>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <%= notice %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      <% end %>
+      
       <%= render @post %>
+      
+      <% if current_user %>
+        <div class="d-flex justify-content-between align-items-center">
+          <%= link_to "Edit this post", edit_post_path(@post), class: "btn btn-primary" %>
+          <%= link_to "Back to posts", posts_path, class: "btn btn-outline-light" %>
+          <%= button_to "Delete this post", @post, method: :delete, class: "btn btn-danger", form: { data: { turbo_confirm: "Are you sure you want to delete this post?" } } %>
+        </div>
+      <% end %>
     </div>
+  
   </div>
+</div>  
+  
 
-  <div class="d-flex justify-content-between align-items-center">
-    <%= link_to "Edit this post", edit_post_path(@post), class: "btn btn-primary" %>
-    <%= link_to "Back to posts", posts_path, class: "btn btn-outline-light" %>
-    <%= button_to "Delete this post", @post, method: :delete, class: "btn btn-danger", form: { data: { turbo_confirm: "Are you sure you want to delete this post?" } } %>
-  </div>
-</div>
