--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
       
       <%= render @post %>
       
-      <% if current_user %>
+      <% if lucas? %>
         <div class="d-flex justify-content-between align-items-center">
           <%= link_to "Edit this post", edit_post_path(@post), class: "btn btn-primary" %>
           <%= link_to "Back to posts", posts_path, class: "btn btn-outline-light" %>
