Add published option for posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,16 @@
     <%= form.text_area :body, class: "form-control bg-dark text-light", rows: 15, required: true %>
   </div>
 
+  <div class="mb-3">
+    <%= form.label :published, class: "form-check-label text-light" %>
+    <%= form.check_box :published, class: "form-check-input" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :featured, class: "form-check-label text-light" %>
+    <%= form.check_box :featured, class: "form-check-input" %>
+  </div>
+
   <div>
     <%= form.submit class: "btn btn-primary" %>
   </div>
