--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,14 @@
 <% content_for :title, "G0RD0.com" %>
 
 <div class="container-fluid mt-4">
-  <% @posts.each do |post| %>
+  <% if notice.present? %>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <%= notice %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+  <% end %>
+
+  <% @posts.published.each do |post| %>
     <div class="row mb-4">
       <div class="col-md-2 col-lg-1 text-md-end mb-2 mb-md-0">
         <small class="text-secondary">
