--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-2 border-contrast-right vh-100">
     <h5 class="mb-3">All Posts</h5>
-    <% Post.all.each do |post| %>
+    <% Post.published.each do |post| %>
       <%= link_to post_path(post), class: "text-decoration-none text-light d-block mb-2" do %>
         <div class="post-link p-2 <%= 'bg-secondary' if post == @post %>">
           <%= post.title %>
