--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,35 +1,49 @@
 <div class="row">
-  <div class="col-md-2 border-contrast-right vh-100">
-    <h5 class="mb-3">All Posts</h5>
-    <% Post.published.each do |post| %>
-      <%= link_to post_path(post), class: "text-decoration-none text-light d-block mb-2" do %>
-        <div class="post-link p-2 <%= 'bg-secondary' if post == @post %>">
-          <%= post.title %>
-        </div>
+  
+  <div class="col-md-2 border-contrast-right px-0">
+    <div class="container border-contrast-bottom d-flex justify-content-center align-items-center mb-0">
+      <h5 class="py-3 px-3 text-secondary mb-0">RECENT POSTS</h5>
+    </div>
+    <div class="sidebar-content" style="height: 84vh; overflow-y: auto;">
+      <% Post.published.each do |post| %>
+        <%= link_to post_path(post), class: "text-decoration-none #{post == @post ? 'text-light' : 'text-secondary'} d-block" do %>
+          <div class="post-link px-4 <%= 'bg-secondary' if post == @post %> d-flex align-items-center" style="height: 60px;">
+            <%= truncate(post.title, length: 35) %>
+          </div>
+        <% end %>
+        <% unless post == Post.published.last %>
+          <hr class="my-0 border-secondary">
+        <% end %>
       <% end %>
-      <% unless post == Post.all.last %>
-        <hr class="my-2 border-secondary">
-      <% end %>
-    <% end %>
+    </div>
   </div>
+
+
   <div class="col-md-10">
-    <div class="container py-5">
+    <div class="container pt-5 d-flex flex-column" style="height: 85vh;">
       <% if notice.present? %>
         <div class="alert alert-success alert-dismissible fade show" role="alert">
           <%= notice %>
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
       <% end %>
+
+      <div class="mb-4">
+        <h1><%= @post.title %></h1>
+        <p class="text-secondary d-flex justify-content-between align-items-center">
+          <span><%= @post.created_at.strftime("%B %d, %Y") %> | Written by Lucas Gordon | <%= @post.views %> views</span>
+          <% if lucas? %>
+            <span class="d-flex gap-3">
+              <%= link_to "Edit", edit_post_path(@post), class: "text-white" %>
+              <%= link_to "Delete", delete_post_path(@post), class: "text-red", data: { turbo_confirm: "Are you sure you want to delete this post?" } %>
+            </span>
+          <% end %>
+        </p>
+      </div>
       
-      <%= render @post %>
-      
-      <% if lucas? %>
-        <div class="d-flex justify-content-between align-items-center">
-          <%= link_to "Edit this post", edit_post_path(@post), class: "btn btn-primary" %>
-          <%= link_to "Back to posts", posts_path, class: "btn btn-outline-light" %>
-          <%= button_to "Delete this post", @post, method: :delete, class: "btn btn-danger", form: { data: { turbo_confirm: "Are you sure you want to delete this post?" } } %>
-        </div>
-      <% end %>
+      <div class="flex-grow-1 overflow-auto">
+        <%= markdown(@post.body) %>
+      </div>
     </div>
   
   </div>
