--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,32 @@
 <div class="row">
   
-  <div class="col-md-2 border-contrast-right px-0">
+  <div class="col-lg-2 col-md-3 col-12 border-contrast-right px-0">
+    <!-- Toggle button for mobile view -->
     <div class="container border-contrast-bottom d-flex justify-content-center align-items-center mb-0">
-      <h5 class="py-3 px-3 text-secondary mb-0">RECENT POSTS</h5>
+      <button class="btn btn-link py-3 px-3 text-secondary mb-0 d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-expanded="false" aria-controls="sidebarMenu">
+        RECENT POSTS
+      </button>
+      <h5 class="py-3 px-3 text-secondary mb-0 d-none d-lg-block">RECENT POSTS</h5>
     </div>
-    <div class="sidebar-content" style="height: 84vh; overflow-y: auto;">
-      <% Post.published.each do |post| %>
-        <%= link_to post_path(post), class: "text-decoration-none #{post == @post ? 'text-light' : 'text-secondary'} d-block" do %>
-          <div class="post-link px-4 <%= 'bg-secondary' if post == @post %> d-flex align-items-center" style="height: 60px;">
-            <%= truncate(post.title, length: 35) %>
-          </div>
+
+    <!-- Collapsible content -->
+    <div class="collapse d-lg-block" id="sidebarMenu">
+      <div class="sidebar-content" style="height: 84vh; overflow-y: auto;">
+        <% Post.published.each do |post| %>
+          <%= link_to post_path(post), class: "text-decoration-none #{post == @post ? 'text-light' : 'text-secondary'} d-block" do %>
+            <div class="post-link px-4 <%= 'bg-secondary' if post == @post %> d-flex align-items-center" style="height: 60px;">
+              <%= truncate(post.title, length: 35) %>
+            </div>
+          <% end %>
+          <% unless post == Post.published.last %>
+            <hr class="my-0 border-secondary">
+          <% end %>
         <% end %>
-        <% unless post == Post.published.last %>
-          <hr class="my-0 border-secondary">
-        <% end %>
-      <% end %>
+      </div>
     </div>
   </div>
 
-
-  <div class="col-md-10">
+  <div class="col-lg-10 col-md-9 col-12">
     <div class="container pt-5 d-flex flex-column" style="height: 85vh;">
       <% if notice.present? %>
         <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -45,8 +52,5 @@
         <%= markdown(@post.body) %>
       </div>
     </div>
-  
   </div>
-</div>  
-  
-
+</div>
