--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
       </div>
       <div class="col-md-10 col-lg-11">
         <h4><%= link_to post.title, post_path(post), class: "text-light text-decoration-none" %></h4>
-        <p class="text-secondary"><%= truncate(post.body, length: 300, separator: ' ') %></p>
+        <p class="text-secondary mb-0"><%= truncate(post.body, length: 300, separator: ' ') %></p>
       </div>
     </div>
     <hr class="border-secondary">
