--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,6 @@
-<div class="row">
+<div class="row mx-0" style="max-width: 100vw; overflow-x: hidden;">
   
   <div class="col-lg-2 col-md-3 col-12 border-contrast-right px-0">
-    <!-- Toggle button for mobile view -->
     <div class="container border-contrast-bottom d-flex justify-content-center align-items-center mb-0">
       <button class="btn btn-link py-3 px-3 text-secondary mb-0 d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-expanded="false" aria-controls="sidebarMenu">
         RECENT POSTS
@@ -9,7 +8,6 @@
       <h5 class="py-3 px-3 text-secondary mb-0 d-none d-lg-block">RECENT POSTS</h5>
     </div>
 
-    <!-- Collapsible content -->
     <div class="collapse d-lg-block" id="sidebarMenu">
       <div class="sidebar-content d-lg-block" style="max-height: 84vh; overflow-y: auto;">
         <% Post.published.each do |post| %>
@@ -26,8 +24,8 @@
     </div>
   </div>
 
-  <div class="col-lg-10 col-md-9 col-12">
-    <div class="container pt-5 d-flex flex-column">
+  <div class="col-lg-10 col-md-9 col-12 px-0">
+    <div class="container-fluid pt-5 d-flex flex-column" style="max-width: 100%; padding-left: 15px; padding-right: 15px;">
       <% if notice.present? %>
         <div class="alert alert-success alert-dismissible fade show" role="alert">
           <%= notice %>
@@ -36,11 +34,11 @@
       <% end %>
 
       <div class="mb-4">
-        <h1><%= @post.title %></h1>
-        <p class="text-secondary d-flex justify-content-between align-items-center">
-          <span><%= @post.created_at.strftime("%B %d, %Y") %> | Written by Lucas Gordon | <%= number_with_delimiter(@post.views) %> views</span>
+        <h1 style="width: 100%; overflow-wrap: break-word;"><%= @post.title %></h1>
+        <p class="text-secondary d-flex flex-wrap justify-content-between align-items-center">
+          <span style="width: 100%; overflow-wrap: break-word;"><%= @post.created_at.strftime("%B %d, %Y") %> | Written by Lucas Gordon | <%= number_with_delimiter(@post.views) %> views</span>
           <% if lucas? %>
-            <span class="d-flex gap-3">
+            <span class="d-flex gap-3 mt-2">
               <%= link_to "Edit", edit_post_path(@post), class: "text-white" %>
               <%= link_to "Delete", delete_post_path(@post), class: "text-red", data: { turbo_confirm: "Are you sure you want to delete this post?" } %>
             </span>
@@ -48,7 +46,7 @@
         </p>
       </div>
       
-      <div class="overflow-auto">
+      <div class="overflow-auto" style="width: 100%; word-wrap: break-word;">
         <%= markdown(@post.body) %>
       </div>
     </div>
