--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "New post" %>
 
-<div class="m-4">
-  <h1>New blog post, Lucas</h1>
+<div class="m-5 p-5">
+  <h1 class="mb-4">What's on your mind, Lucas?</h1>
 
   <%= render "form", post: @post %>
 
