--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "G0RD0.com" %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title><%= yield(:title) %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -19,11 +19,12 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
-    <meta property="og:title" content="G0RD0.com">
-    <meta property="og:description" content="A compilation of my brief thoughts and quick creations.">
-    <meta property="og:image" content="<%= image_url('render_display.png') %>">
-    <meta property="og:url" content="<%= request.original_url %>">
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="<%= yield(:title) %>" />
+    <meta property="og:description" content="<%= yield(:description) || "Default description from G0RD0.com" %>" />
+    <% default_image = asset_path('render_display.png') %>
+    <meta property="og:image" content="<%= content_for?(:image) ? yield(:image) : default_image %>" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:type" content="website" />
   </head>
 
   <body class="bg-dark text-white">
