--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
   <head>
     <title><%= yield(:title) %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,12 +19,11 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
-    <meta property="og:title" content="<%= yield(:title) %>" />
-    <meta property="og:description" content="<%= yield(:description) || "Default description from G0RD0.com" %>" />
-    <% default_image = asset_path('render_display.png') %>
-    <meta property="og:image" content="<%= content_for?(:image) ? yield(:image) : default_image %>" />
+    <meta property="og:title" content="<%= yield(:og_title) || yield(:title) %>" />
+    <meta property="og:type" content="<%= yield(:og_type) || 'website' %>" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:type" content="website" />
+    <meta property="og:image" content="<%= yield(:og_image) || asset_url('render_display.png') %>" />
+    <meta property="og:description" content="<%= yield(:og_description) || yield(:description) || "Lucas Gordon's brief thoughts and quick creations." %>" />
   </head>
 
   <body class="bg-dark text-white">
