--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,21 @@
   <head>
     <title><%= yield(:title) %></title>
 
-    <meta property="og:title" content="<%= yield(:og_title) || yield(:title) %>" />
-    <meta property="og:type" content="<%= yield(:og_type) || 'article' %>" />
-    <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= h(yield(:og_image) || "https://i.ibb.co/4Kfm5xt/Screenshot-2024-10-13-at-12-38-34.png") %>" />
-    <meta property="og:description" content="<%= h(yield(:og_description) || yield(:description) || "Lucas Gordon's brief thoughts and quick creations.") %>" />
-    <meta property="og:site_name" content="G0RD0.com" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.g0rd0.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="G0RD0.com">
+    <meta property="og:description" content="Brief thoughts and quick creations.">
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/53d9ce2f-4db2-473a-8718-a9127c3939af.png?token=HLsOQ50udQaRTHVrB86t4yeCWS7Kj8kqjcku8Ks7fFU&height=650&width=1200&expires=33264928861">
+    <meta property="og:site_name" content="G0RD0.com">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="g0rd0.com">
+    <meta property="twitter:url" content="https://www.g0rd0.com/">
+    <meta name="twitter:title" content="G0RD0.com">
+    <meta name="twitter:description" content="Brief thoughts and quick creations.">
+    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/53d9ce2f-4db2-473a-8718-a9127c3939af.png?token=HLsOQ50udQaRTHVrB86t4yeCWS7Kj8kqjcku8Ks7fFU&height=650&width=1200&expires=33264928861">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
