--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#">
   <head>
-    <title><%= yield(:title) %></title>
+    <%= display_meta_tags site: yield(:title) %>
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://www.g0rd0.com/">
