--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,8 +25,9 @@
     </div>
   </div>
 
-  <div class="col-lg-10 col-md-9 col-12 px-0">
-    <div class="container-fluid pt-5 d-flex flex-column" style="max-width: 100%; padding-left: 50px; padding-right: 50px;">
+  <div class="col-lg-10 col-md-9 col-12 px-0 d-flex flex-column" style="max-height: 84vh; overflow-y: auto;">
+    <div class="container-fluid pt-5 d-flex flex-column px-sm-5 ps-4 pe-3">
+      
       <% if notice.present? %>
         <div class="alert alert-success alert-dismissible fade show" role="alert">
           <%= notice %>
@@ -34,8 +35,8 @@
         </div>
       <% end %>
 
-      <div class="mb-4">
-        <h1 style="width: 100%; overflow-wrap: break-word;"><%= @post.title %></h1>
+      <div class="mb-2">
+        <h1 class="overflow-auto" style="width: 100%; overflow-wrap: break-word;"><%= @post.title %></h1>
         <p class="text-secondary d-flex flex-wrap justify-content-between align-items-center">
           <span style="width: 100%; overflow-wrap: break-word;"><%= @post.created_at.strftime("%B %d, %Y") %> | Written by Lucas Gordon | <%= number_with_delimiter(@post.views) %> views</span>
           <% if lucas? %>
