--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,10 @@
       <h4 class="mb-2">Subscribe to new posts</h4>
       <%= form_with url: emails_path, method: :post, local: true, scope: :email do |form| %>
         <div class="input-group">
-          <%= form.email_field :email, placeholder: "Your email", class: "form-control bg-dark text-white border-secondary" %>
+          <%= form.email_field :email, 
+                                   placeholder: "Your email", 
+                                   class: "form-control bg-dark text-white border-secondary custom-placeholder",
+                                   style: "max-width: 400px" %>
           <%= form.submit "Subscribe", class: "btn btn-secondary" %>
         </div>
       <% end %>
