--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,7 @@
 <% content_for :title, @post.title %>
 <% content_for :description, @post.body.to_s[0..100] %>
 
-<div class="row mx-0" style="max-width: 100vw; overflow-x: hidden;">
-  
+<div class="row mx-0 overflow-hidden">
   <div class="col-lg-2 col-md-3 col-12 border-contrast-right px-0">
     <div class="container border-contrast-bottom d-flex justify-content-center align-items-center mb-0">
       <button class="btn btn-link py-3 px-3 text-secondary mb-0 d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-expanded="false" aria-controls="sidebarMenu">
@@ -12,7 +11,7 @@
     </div>
 
     <div class="collapse d-lg-block" id="sidebarMenu">
-      <div class="sidebar-content d-lg-block" style="height: 84vh; overflow-y: auto;">
+      <div class="sidebar-content">
         <% Post.published.limit(25).each do |post| %>
           <%= link_to post_path(post), class: "text-decoration-none #{post == @post ? 'text-light' : 'text-secondary'} d-block" do %>
             <div class="post-link px-4 <%= 'bg-secondary' if post == @post %> d-flex align-items-center" style="height: 60px;">
@@ -25,9 +24,8 @@
     </div>
   </div>
 
-  <div class="col-lg-10 col-md-9 col-12 px-0 d-flex flex-column" style="height: 84vh; overflow-y: auto;">
+  <div class="col-lg-10 col-md-9 col-12 px-0 d-flex flex-column">
     <div class="container-fluid pt-5 d-flex flex-column px-sm-5 ps-4 pe-3">
-      
       <% if notice.present? %>
         <div class="alert alert-success alert-dismissible fade show" role="alert">
           <%= notice %>
@@ -36,18 +34,16 @@
       <% end %>
 
       <div class="mb-2">
-        <h1 class="overflow-auto" style="width: 100%; overflow-wrap: break-word;"><%= @post.title %></h1>
+        <h1 class="text-break"><%= @post.title %></h1>
         <p class="text-secondary d-flex flex-wrap justify-content-between align-items-center">
-          <span style="width: 100%; overflow-wrap: break-word;"><%= @post.created_at.strftime("%B %d, %Y") %> | Written by Lucas Gordon | <%= number_with_delimiter(@post.views) %> views</span>
+          <span class="text-break"><%= @post.created_at.strftime("%B %d, %Y") %> | Written by Lucas Gordon | <%= number_with_delimiter(@post.views) %> views</span>
           <% if lucas? %>
-            <span class="d-flex gap-3 mt-2">
-              <%= link_to "Edit", edit_post_path(@post), class: "text-white" %>
-            </span>
+            <%= link_to "Edit", edit_post_path(@post), class: "text-white mt-2" %>
           <% end %>
         </p>
       </div>
       
-      <div class="overflow-auto" style="width: 100%; word-wrap: break-word;">
+      <div class="text-break">
         <%= markdown(@post.body) %>
         <div class="text-secondary my-5">
           G0RD0.com
