--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -47,5 +47,11 @@
     <% if lucas? %>
       <%= link_to "New Post", new_post_path, class: "btn btn-secondary m-3" %>
     <% end %>
+
+    <div class="d-none d-md-block d-flex align-items-center h-100">
+      <div class="m-3">
+        <%= render "shared/email_form" %>
+      </div>
+    </div>
   </div>
 </div>
